Unauthenticate user POST
